ensure no border image on IE

--- a/slider.less
+++ b/slider.less
@@ -339,6 +339,7 @@
     .slide-image img {
         z-index: 2;
         width: 100%;
+        border: none;
     }
     .slide-image .caption {
         .opacity(0.8);
